# diag2data

./: Makefile  README.rst  pyproject.toml
scripts/: pypi-release.sh  pyproject-util.py
src/diag2data/: __init__.py  __main__.py
tests/: expected-gcc.json  gcc-diagnostics.txt  test-diag2data.py  test-diagnostics.txt
